# playlists-insights

./: .cache  .gitignore  01_extract.py  01b_audio.py  01c_bpm.py  02_clustering.py  03_analyse_musicale.py  04_analyse_paroles.py  05_rapport.py  06_playlists.py  07_suno_prompts.py  08_analyses_supplementaires.py  README.md  config.py  pyproject.toml  utils.py
